--- a/templates/domestic/credit_list.html
+++ b/templates/domestic/credit_list.html
@@ -27,6 +27,7 @@
             <input class="col-9" placeholder="검색" name="q" value="{{q}}">
             <button class="btn btn-outline-success" type="submit">검색</button>
         </form>
+        {% if page_obj %}
         <table>
             <tr align='center'>
                 <th width='150'>단과대학</th>
@@ -36,7 +37,7 @@
                 <th width='150'>지원학교</th>
                 <th width='150'>합격여부</th>
             </tr>
-            {% for post in credit_posts %}
+            {% for post in page_obj %}
             <tr align='center'>
                 <td>{{ post.college }}</td>
                 <td>{{ post.credit }}</td>
@@ -47,6 +48,22 @@
             </tr>
             {% endfor %}
         </table>
+        {% else %}
+        <table>
+            <tr align='center'>
+                <th width='150'>단과대학</th>
+                <th width='150'>이수학점</th>
+                <th width='150'>평점평균</th>
+                <th width='150'>지원시기</th>
+                <th width='150'>지원학교</th>
+                <th width='150'>합격여부</th>
+            </tr>
+        </table>
+        <div class='text-center m-5'>
+            <h5>등록된 정보가 없습니다</h5>
+            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        </div>
+        {% endif %}
         <div style="text-align:center">
             <div class="pagination">
                 <div style="width:35%; margin: 5px;">
