TEST-68 Feat:qna(foreign)검색 기능

--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -45,7 +45,7 @@
                             
                         </span>
                         {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
-                            ..
+                            <span>..</span>
                         {% endif %}
                     {% endfor %}
                     </div>
@@ -59,7 +59,7 @@
     
                 </div>  
             </div> 
-</div>
+
 </div>
 {%endblock%}
 
