--- a/templates/foreign/question_list.html
+++ b/templates/foreign/question_list.html
@@ -13,6 +13,12 @@
             <button class="btn btn-sm btn-border" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
+        <form class="d-flex justify-content-center" action="{% url 'foreign:question_search' univ.pk %}" method="post">
+            {% csrf_token %}
+            <input class="col-9" placeholder="검색" name="q" value="{{q}}">
+            <button class="btn btn-outline-success" type="submit">검색</button>
+        </form>
+        {% if page_obj %}
         <table>
             <tr align='center'>
                 <th width='50'>번호</th>
@@ -27,6 +33,19 @@
             </tr>
             {% endfor %}
         </table>
+        {% else %}
+        <table>
+            <tr align='center'>
+                <th width='50'>번호</th>
+                <th width='600' >제목</th>
+                <th>날짜</th>
+            </tr>
+        </table>
+        <div class='text-center m-5'>
+            <h5>등록된 정보가 없습니다</h5>
+            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        </div>
+        {% endif %}
         <div style="text-align:center">
             <div class="pagination">
             
@@ -45,7 +64,7 @@
                         
                     </span>
                     {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
-                        ..
+                       <span> ..</span>
                     {% endif %}
                 {% endfor %}
                 </div>
@@ -60,6 +79,7 @@
             </div>  
         </div> 
     </div>
+ 
 
 {% endblock %}
 
