TEST-8 Feat: 위키 게시물 없음 표시/ 대댓글 모델 추가(!migrate!)

--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -8,7 +8,7 @@
                 <span>QnA</span>
                 <a href="{% url "country:country_wiki" univ.country.pk%}"><h3>{{univ.country}}</h3></a>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ user.is_authenticated }}')"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
         </div>
         <hr>
         <div>
@@ -34,7 +34,7 @@
             <div class="d-flex justify-content-between">
                 <h4>답변</h4>
 
-                <button onclick="canIAnswer('{{ user.is_authenticated }}')">답변 달기</button>
+                <button onclick="canIAnswer('{{ is_authenticated }}')">답변 달기</button>
             </div>
             {% for comment in comments %}
                 <div class="d-flex justify-content-between">
@@ -51,11 +51,33 @@
                             <input type="submit" value="삭제" >
                         </form>
                         {% endif %}
+                        <button id='undercomment' onclick="commentPlus('{{comment.pk}}')">댓글</button><br/>
                     </div>
                 </div>
+                <div class="undercomment_list_{{ comment.pk }}">
+                    {% for undercomment in undercomments  %}
+                        {% if undercomment.comment == comment %}
+                        <div class="d-flex justify-content-between" id="undercomment_{{ undercomment.pk }}">
+                            <div>
+                                <span>👉 {{ undercomment.comment_author.nickname }}</span>
+                                <span style="margin-left: 30px;">{{ undercomment.comment_content }}</span>
+                            </div>
+                            {% if undercomment.comment_author == request.user %}
+                            <div>
+                                <button>수정</button>
+                                <button>삭제</button>
+                            </div>
+                            {% endif %}
+                        </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="undercomment_{{ comment.pk }}"></div>
+
             {% endfor %}
             </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         const canIPost= (is_authenticated)=> {
             if (is_authenticated == 'False') {
@@ -75,6 +97,51 @@
             }
         };
         
+        const commentPlus = (comment_id) => {
+        const element = document.querySelector(`.undercomment_${comment_id}`);
+        const originHTML = element.innerHTML;
+            
+        element.innerHTML = `
+            <input type="text" id="new-undercomment" placeholder="댓글을 입력해주세요." class="w-75"/>
+            <button class="btn btn-sm btn-outline-dark" onclick="onClickUnderComment('{{is_authenticated}}', ${comment_id}, document.querySelector('#new-undercomment').value)">확인</button>
+        `
+        }
+        
+        const onClickUnderComment= async(is_authenticated, comment_id, comment_content) => {  
+            if (is_authenticated == 'False') {
+                    alert('로그인이 필요한 서비스입니다.');
+                    window.location.href='{% url "login:login" %}';
+            } else {
+            const url = './undercomment_create/';
+            const {data} = await axios.post(url, {
+                comment_id,
+                comment_content,
+            });
+            underCommentHandleResponse(data.comment_id, data.undercomment_id, data.undercomment_author, data.undercomment_content);
+            }
+        };
+        const underCommentHandleResponse = (comment_id, undercomment_id, undercomment_author, undercomment_content) => {
+                const element = document.querySelector(`.undercomment_list_${comment_id}`);
+                const newDiv = document.createElement('div')
+                newDiv.className = "d-flex justify-content-between";
+                newDiv.id = `undercomment_${undercomment_id}`
+                
+                newDiv.innerHTML = `
+                <div>
+                    <span>👉 ${undercomment_author}</span>
+                    <span style="margin-left: 30px;">${undercomment_content}</span>
+                </div>
+                <div>
+                    <button>수정</button>
+                    <button>삭제</button>
+                </div>
+                `
+                element.appendChild(newDiv)
+                const input_content = document.querySelector('#new-undercomment')
+                input_content.value = null
+            };
+            
+
     </script>
 
 {% endblock %}
