--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -26,6 +26,12 @@
                     </tr>
             {% endfor %}
         </table>
+        {% if not page_obj %}
+        <div class='text-center m-5'>
+            <h5>등록된 정보가 없습니다</h5>
+            <h6>첫 번째로 정보를 등록해주세요!</h6>
+        </div>
+        {% endif %}
         
             <div style="text-align:center">
                 <div class="pagination">
