TEST-12 Style: 마이페이지 이름 수정

--- a/templates/login/mypage.html
+++ b/templates/login/mypage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container ml-5 mt-4 w-75">
-        <h2>내 정보 수정</h2>
+        <h2>마이페이지</h2>
         <hr />
         <section class="d-flex flex-column">
             <div id="rename">
