TEST-45 Feat:위키 수정 완료 모달

--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -27,7 +27,7 @@
                 <textarea type="{{ field.field.widget.textarea_type }}" class="form-control"
                     id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" 	cols = "100" rows="20" >{{field.value}}</textarea>
             </div>
-            <input type="submit" value="저장하기" />
+            <input type="submit" value="저장하기" onclick="onClickEditWiki()"/>
             {% else %}
             <div class="form-group">
                 <textarea type="{{ field.field.widget.textarea_type }}" class="form-control "
@@ -42,4 +42,14 @@
     </div>
     </div>
     </div>
+    <script>
+    const onClickEditWiki= () => {  
+        const allowance =  alert('위키 수정이 완료되었습니다');
+        
+        window.location.href='{% url "foreign:wiki" univ.pk%}';
+        
+        
+    };
+    
+    </script>
 {%endblock%}
