TEST-45 Feat:위키 수정 완료 모달(domestic,country,foreign) 모두 적용

--- a/templates/foreign/wiki_edit.html
+++ b/templates/foreign/wiki_edit.html
@@ -44,7 +44,7 @@
     </div>
     <script>
     const onClickEditWiki= () => {  
-        const allowance =  alert('위키 수정이 완료되었습니다');
+        alert('위키 수정이 완료되었습니다');
         
         window.location.href='{% url "foreign:wiki" univ.pk%}';
         
