TEST-73 Feat: 파견 후기 댓글 삭제 모달 / qna 댓글 삭제 오류 수정

--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -85,7 +85,9 @@
     }
     
     //댓글 삭제
-    const onClickDelete= async(comment_id) => {  
+    const onClickDelete= async(comment_id) => { 
+        const allowance =  confirm('정말로 삭제하시겠습니까?'); 
+        if (allowance == true) {
         const url = './comment_delete/';
         const res= await fetch(url,{        
             method: 'POST',
@@ -94,8 +96,9 @@
             },
             body: JSON.stringify({comment_id:comment_id})
         }); 
-        const {comment_id:id} = await res.json();        
+        const {comment_id:id} = await res.json();       
         deleteHandleResponse(id);
+    };
     };
 
     const deleteHandleResponse = (comment_id)=>{
