--- a/templates/foreign/question_detail.html
+++ b/templates/foreign/question_detail.html
@@ -134,8 +134,8 @@
                     <span style="margin-left: 30px;">${undercomment_content}</span>
                 </div>
                 <div>
-                    <button>수정</button>
-                    <button>삭제</button>
+                    <button onclick="editComment('${comment_id}', '${undercomment_id}','${undercomment_content}')">수정</button>
+                    <button onclick="onClickDeleteUnder('${undercomment_id}')">삭제</button>
                 </div>
                 `
                 element.appendChild(newDiv)
