--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -114,4 +114,10 @@
 
 </script>
 
+{% if verification_error %}
+    <script>
+        alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
+    </script>
+{% endif %}
+
 {% endblock %}
