TEST-33 Style: 위키 cerificate 코드 형태 수정, 내용은 변화 없음

--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -114,7 +114,7 @@
 
 </script>
 
-{% if verification_error %}
+{% if certificate_error %}
     <script>
         alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
     </script>
