--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -89,6 +89,13 @@
 </script>
 {% endblock %}
 {% block extra %}
+
+    {% if certificate_error %}
+    <script>
+        alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
+    </script>
+    {% endif %}
+
     {% if verification_error %}
         <script>
             alert("작성자 본인만 글을 수정할 수 있습니다.");
