--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -96,9 +96,14 @@
     </script>
     {% endif %}
 
-    {% if verification_error %}
+    {% if q_verification_error %}
         <script>
             alert("작성자 본인만 글을 수정할 수 있습니다.");
+        </script>
+    {% endif %}
+    {% if c_verification_error %}
+        <script>
+            alert("작성자 본인만 댓글을 수정할 수 있습니다.");
         </script>
     {% endif %}
 {% endblock %}
