--- a/templates/foreign/univ_search.html
+++ b/templates/foreign/univ_search.html
@@ -44,6 +44,7 @@
             <input type="submit" value="확인" style="display: none;">
         </div>
     </form>
+    <small>영어로 먼저 검색해보신 후 결과가 없을 경우 해당 국가의 언어로 검색하는 것을 추천드립니다.</small>
     <form method="POST" enctype="multipart/form-data" class="form" >
         {% csrf_token %}
         <input name="away_name" style="display: none;" id="formUniversity">
